test/negative/auto_in_struct_field.cg
struct Bad {
    x: auto,
}

fn main() -> i32 { 0 }

